Add PDF support enhancement to RAG application

--- a/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
+++ b/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
@@ -355,7 +355,12 @@
         "1. Is there any way to modify this dimension?\n",
         "2. What technique does OpenAI use to achieve this?\n",
         "\n",
-        "> NOTE: Check out this [API documentation](https://platform.openai.com/docs/api-reference/embeddings/create) for the answer to question #1, and [this documentation](https://platform.openai.com/docs/guides/embeddings/use-cases) for an answer to question #2!"
+        "> NOTE: Check out this [API documentation](https://platform.openai.com/docs/api-reference/embeddings/create) for the answer to question #1, and [this documentation](https://platform.openai.com/docs/guides/embeddings/use-cases) for an answer to question #2!\n",
+        "\n",
+        "##### ✅ Answer:\n",
+        "1. No, according to the OpenAI API documentation, you cannot modify the dimension of text-embedding-3-small. The output dimension is fixed at 1536.\n",
+        "\n",
+        "2. OpenAI uses dimensionality reduction techniques to achieve this fixed dimension. The model first creates a high-dimensional representation of the text and then reduces it to the fixed 1536 dimensions while preserving the most important semantic information. This ensures that the embeddings maintain their semantic meaning while being computationally efficient and consistent in size."
       ]
     },
     {
@@ -415,7 +420,20 @@
         "\n",
         "What are the benefits of using an `async` approach to collecting our embeddings?\n",
         "\n",
-        "> NOTE: Determining the core difference between `async` and `sync` will be useful! If you get stuck - ask ChatGPT!"
+        "> NOTE: Determining the core difference between `async` and `sync` will be useful! If you get stuck - ask ChatGPT!\n",
+        "\n",
+        "##### ✅ Answer:\n",
+        "Using an async approach for collecting embeddings offers several key benefits:\n",
+        "\n",
+        "1. **Improved Performance**: Async allows multiple embedding requests to be processed concurrently without blocking. While one request is waiting for the API response, another request can be initiated.\n",
+        "\n",
+        "2. **Better Resource Utilization**: With async, the program can efficiently use I/O wait time (when waiting for API responses) to process other tasks, rather than sitting idle.\n",
+        "\n",
+        "3. **Scalability**: When dealing with large numbers of documents, async processing can significantly reduce the total time needed to generate embeddings by parallelizing the API calls.\n",
+        "\n",
+        "4. **Reduced Latency**: Since multiple requests can be processed simultaneously, the overall latency of the embedding process is reduced compared to processing each document sequentially.\n",
+        "\n",
+        "The core difference between async and sync is that async operations can be paused and resumed, allowing other operations to run during the waiting periods, while sync operations block until they complete."
       ]
     },
     {
@@ -1016,6 +1034,67 @@
       ]
     },
     {
+      "cell_type": "raw",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "### 🏗️ Activity #1: PDF Support Enhancement\n",
+        "\n",
+        "For this enhancement, we've added PDF file support to our RAG application. This includes:\n",
+        "\n",
+        "1. A new `PDFLoader` class for loading and extracting text from PDF files\n",
+        "2. A specialized `PDFTextSplitter` class that handles PDF-specific text formatting\n",
+        "3. Integration with our existing RAG pipeline\n",
+        "\n",
+        "The enhancement allows our application to:\n",
+        "- Process PDF documents directly\n",
+        "- Handle PDF-specific formatting and artifacts\n",
+        "- Maintain document structure during text splitting\n",
+        "- Clean up common PDF artifacts (like extra whitespace and line breaks)\n",
+        "\n",
+        "Let's see how it works!\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from aimakerspace.pdf_utils import PDFLoader, PDFTextSplitter\n",
+        "\n",
+        "# Example usage with a PDF file\n",
+        "# Note: You'll need to provide your own PDF file\n",
+        "pdf_loader = PDFLoader(\"path_to_your_pdf.pdf\")\n",
+        "pdf_documents = pdf_loader.load_pdf()\n",
+        "\n",
+        "# Use the PDF-specific text splitter\n",
+        "pdf_splitter = PDFTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+        "split_pdf_documents = pdf_splitter.split_texts(pdf_documents)\n",
+        "\n",
+        "# Create a new vector database for the PDF content\n",
+        "pdf_vector_db = VectorDatabase()\n",
+        "pdf_vector_db = asyncio.run(pdf_vector_db.abuild_from_list(split_pdf_documents))\n",
+        "\n",
+        "# Create a RAG pipeline for the PDF content\n",
+        "pdf_rag_pipeline = RetrievalAugmentedQAPipeline(\n",
+        "    vector_db_retriever=pdf_vector_db,\n",
+        "    llm=chat_openai,\n",
+        "    response_style=\"detailed\",\n",
+        "    include_scores=True\n",
+        ")\n",
+        "\n",
+        "# Example query\n",
+        "# result = pdf_rag_pipeline.run_pipeline(\n",
+        "#     \"Your question about the PDF content here\",\n",
+        "#     k=3\n",
+        "# )\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -1044,7 +1123,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.13.5"
     },
     "orig_nbformat": 4,
     "widgets": {
