Add RAG process diagram with explanation

--- a/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
+++ b/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
@@ -1095,6 +1095,72 @@
       ]
     },
     {
+      "cell_type": "raw",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "### RAG Process Diagram\n",
+        "\n",
+        "Below is a detailed diagram of our RAG (Retrieval Augmented Generation) process, including the new PDF support enhancement. The diagram shows four main components:\n",
+        "\n",
+        "1. **Document Processing**:\n",
+        "   - Handles both text and PDF documents\n",
+        "   - Uses appropriate loaders (TextFileLoader/PDFLoader)\n",
+        "   - Splits documents into manageable chunks\n",
+        "\n",
+        "2. **Embedding Generation**:\n",
+        "   - Converts text chunks into vector embeddings\n",
+        "   - Stores document-vector pairs in the vector database\n",
+        "\n",
+        "3. **Query Processing**:\n",
+        "   - Embeds user queries\n",
+        "   - Performs semantic search using cosine similarity\n",
+        "   - Retrieves most relevant documents\n",
+        "\n",
+        "4. **Response Generation**:\n",
+        "   - Assembles context from relevant documents\n",
+        "   - Constructs prompts with context and query\n",
+        "   - Generates final response using LLM\n",
+        "\n",
+        "```mermaid\n",
+        "graph TD\n",
+        "    subgraph \"Document Processing\"\n",
+        "        A1[\"Text Documents\"] --> B1[\"TextFileLoader\"]\n",
+        "        A2[\"PDF Documents\"] --> B2[\"PDFLoader\"]\n",
+        "        B1 --> C[\"Document Chunks\"]\n",
+        "        B2 --> C\n",
+        "        C --> D[\"Text Splitter<br/>(CharacterTextSplitter/PDFTextSplitter)\"]\n",
+        "        D --> E[\"Split Documents\"]\n",
+        "    end\n",
+        "\n",
+        "    subgraph \"Embedding Generation\"\n",
+        "        E --> F[\"OpenAI Embedding Model<br/>(text-embedding-3-small)\"]\n",
+        "        F --> G[\"Vector Database<br/>(Document-Vector Pairs)\"]\n",
+        "    end\n",
+        "\n",
+        "    subgraph \"Query Processing\"\n",
+        "        H[\"User Query\"] --> I[\"Query Embedding\"]\n",
+        "        I --> J[\"Semantic Search<br/>(Cosine Similarity)\"]\n",
+        "        G --> J\n",
+        "        J --> K[\"Top K Most<br/>Relevant Documents\"]\n",
+        "    end\n",
+        "\n",
+        "    subgraph \"Response Generation\"\n",
+        "        K --> L[\"Context Assembly\"]\n",
+        "        H --> M[\"Prompt Construction\"]\n",
+        "        L --> M\n",
+        "        M --> N[\"LLM<br/>(GPT Model)\"]\n",
+        "        N --> O[\"Final Response\"]\n",
+        "    end\n",
+        "```\n",
+        "\n",
+        "This diagram illustrates how our enhanced RAG system processes both traditional text documents and PDF files through a unified pipeline, while handling the specific requirements of each format appropriately.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
