Final updates to notebook

--- a/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
+++ b/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
@@ -1032,19 +1032,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
-          "ename": "ImportError",
-          "evalue": "cannot import name 'TextSplitter' from 'aimakerspace.text_utils' (/Users/eugeneklyashtorny/projects/AIE7/02_Embeddings_and_RAG/aimakerspace/text_utils.py)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01maimakerspace\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpdf_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PDFLoader, PDFTextSplitter\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Example usage with a PDF file\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Note: You'll need to provide your own PDF file\u001b[39;00m\n\u001b[32m      5\u001b[39m pdf_loader = PDFLoader(\u001b[33m\"\u001b[39m\u001b[33mcircle_prospectus.pdf\u001b[39m\u001b[33m\"\u001b[39m)\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/projects/AIE7/02_Embeddings_and_RAG/aimakerspace/pdf_utils.py:5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m List\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mPyPDF2\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtext_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TextSplitter, CharacterTextSplitter\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mPDFLoader\u001b[39;00m:\n\u001b[32m      8\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"A class to load and process PDF documents.\"\"\"\u001b[39;00m\n",
-            "\u001b[31mImportError\u001b[39m: cannot import name 'TextSplitter' from 'aimakerspace.text_utils' (/Users/eugeneklyashtorny/projects/AIE7/02_Embeddings_and_RAG/aimakerspace/text_utils.py)"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loading PDF from circle_prospectus.pdf...\n",
+            "Successfully loaded 366 pages from PDF\n",
+            "\n",
+            "Splitting documents into chunks...\n",
+            "Created 1698 document chunks\n",
+            "\n",
+            "Generating embeddings and building vector database...\n",
+            "Vector database built successfully\n",
+            "\n",
+            "Initializing RAG pipeline...\n",
+            "RAG pipeline ready!\n",
+            "\n",
+            "You can now run queries like:\n",
+            "result = pdf_rag_pipeline.run_pipeline(\"What is this document about?\", k=3)\n"
           ]
         }
       ],
@@ -1094,6 +1102,24 @@
         "\n",
         "    except Exception as e:\n",
         "        print(f\"Error occurred: {str(e)}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'response': 'The document is a private and confidential prospectus meant for a limited number of investors regarding securities. It contains significant restrictions on distribution; for example, it may not be provided to individuals other than the original recipients or used for any other purpose. It indicates that the securities cannot be offered or sold to the public in several regions, including the Dubai International Financial Centre and Saudi Arabia, unless permitted under specific regulations. The document further emphasizes that prospective purchasers should conduct their own due diligence and that the liability for the content lies with the issuer and associated experts. Additionally, it contains warnings about distribution limits in other jurisdictions, such as Hong Kong and Singapore, where specific legal conditions must be met for circulation or sale.', 'context': [('ument is strictly private and confidential and is being distributed to a limited number of investors and must not be provided to any person other than the original recipient, and may not be reproduced or used for any other purpose. The interests in the securities may not be offered or sold directly or indirectly to the public in the Dubai International Financial Centre. Saudi Arabia This document may not be distributed in the Kingdom of Saudi Arabia except to such persons as are permitted under the Rules on the Offer of Securities and Continuing Obligations Regulations as issued by the board of the Saudi Arabian Capital Market Authority (“CMA”) pursuant to resolution number 3-123-2017 dated 27 December 2017, as amended. The CMA does not make any representation as to the accuracy or completeness of this document and expressly disclaims any liability whatsoever for any loss arising from, or incurred in reliance upon, any part of this document. Prospective purchasers of the securities off', np.float64(0.39095817857034965)), ('eness of this document and expressly disclaims any liability whatsoever for any loss arising from, or incurred in reliance upon, any part of this document. Prospective purchasers of the securities offered hereby should conduct their own due diligence on the accuracy of the information relating to the securities. If you do not understand the contents of this document, you should consult an authorized financial adviser. Abu Dhabi global market The Abu Dhabi Global Market (“ADGM”), including the Financial Services Regulatory Authority and the Registration Authority does not accept any responsibility for the content of the information included in this prospectus, including the accuracy or completeness of such information. The liability for the content of this prospectus lies with the issuer of this prospectus and other persons, such as experts, whose opinions are included in this prospectus with their consent. The ADGM has also not assessed the suitability of the securities to which this p', np.float64(0.3816493128938687)), ('ation, or document relating to the shares may be issued or may be in the possession of any person for the purpose of issue (in each case whether in Hong Kong or elsewhere), which is directed at, or the contents of which are likely to be accessed or read by, the public in Hong Kong (except if permitted to do so under the securities laws of Hong Kong) other than with respect to shares which are or are intended to be disposed of only to persons outside Hong Kong or only to “professional investors” in Hong Kong as defined in the Securities and Futures Ordinance and any rules made thereunder. Singapore This document has not been registered as a prospectus with the Monetary Authority of Singapore. Accordingly, this document and any other material in connection with the offer or sale, or invitation for subscription or purchase, of the shares may not be circulated or distributed, nor may the shares be offered or sold, or be made the subject of an invitation for subscription or purchase, whethe', np.float64(0.35619932797360226))], 'context_count': 3, 'similarity_scores': ['Source 1: 0.391', 'Source 2: 0.382', 'Source 3: 0.356'], 'prompts_used': {'system': {'role': 'system', 'content': 'You are a knowledgeable assistant that answers questions based strictly on provided context.\\n\\nInstructions:\\n- Only answer questions using information from the provided context\\n- If the context doesn\\'t contain relevant information, respond with \"I don\\'t know\"\\n- Be accurate and cite specific parts of the context when possible\\n- Keep responses detailed and detailed\\n- Only use the provided context. Do not use external knowledge.\\n- Only provide answers when you are confident the context supports your response.'}, 'user': {'role': 'user', 'content': 'Context Information:\\n[Source 1]: ument is strictly private and confidential and is being distributed to a limited number of investors and must not be provided to any person other than the original recipient, and may not be reproduced or used for any other purpose. The interests in the securities may not be offered or sold directly or indirectly to the public in the Dubai International Financial Centre. Saudi Arabia This document may not be distributed in the Kingdom of Saudi Arabia except to such persons as are permitted under the Rules on the Offer of Securities and Continuing Obligations Regulations as issued by the board of the Saudi Arabian Capital Market Authority (“CMA”) pursuant to resolution number 3-123-2017 dated 27 December 2017, as amended. The CMA does not make any representation as to the accuracy or completeness of this document and expressly disclaims any liability whatsoever for any loss arising from, or incurred in reliance upon, any part of this document. Prospective purchasers of the securities off\\n\\n[Source 2]: eness of this document and expressly disclaims any liability whatsoever for any loss arising from, or incurred in reliance upon, any part of this document. Prospective purchasers of the securities offered hereby should conduct their own due diligence on the accuracy of the information relating to the securities. If you do not understand the contents of this document, you should consult an authorized financial adviser. Abu Dhabi global market The Abu Dhabi Global Market (“ADGM”), including the Financial Services Regulatory Authority and the Registration Authority does not accept any responsibility for the content of the information included in this prospectus, including the accuracy or completeness of such information. The liability for the content of this prospectus lies with the issuer of this prospectus and other persons, such as experts, whose opinions are included in this prospectus with their consent. The ADGM has also not assessed the suitability of the securities to which this p\\n\\n[Source 3]: ation, or document relating to the shares may be issued or may be in the possession of any person for the purpose of issue (in each case whether in Hong Kong or elsewhere), which is directed at, or the contents of which are likely to be accessed or read by, the public in Hong Kong (except if permitted to do so under the securities laws of Hong Kong) other than with respect to shares which are or are intended to be disposed of only to persons outside Hong Kong or only to “professional investors” in Hong Kong as defined in the Securities and Futures Ordinance and any rules made thereunder. Singapore This document has not been registered as a prospectus with the Monetary Authority of Singapore. Accordingly, this document and any other material in connection with the offer or sale, or invitation for subscription or purchase, of the shares may not be circulated or distributed, nor may the shares be offered or sold, or be made the subject of an invitation for subscription or purchase, whethe\\n\\nNumber of relevant sources found: 3\\nRelevance scores: Source 1: 0.391, Source 2: 0.382, Source 3: 0.356\\n\\nQuestion: What is this document about?\\n\\nPlease provide your answer based solely on the context above.'}}}\n"
+          ]
+        }
+      ],
+      "source": [
+        "result = pdf_rag_pipeline.run_pipeline(\"What is this document about?\", k=3)\n",
+        "print(result)"
       ]
     },
     {
