work on assignment 4

--- a/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
+++ b/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "kxczzsfVFNWT"
       },
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -383,16 +383,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'Application and Verification Guide\\nIntroduction\\nThis guide is intended for college financial aid administrators and counselors who help students with the financial aid\\nprocess4completing the Free Application for Federal Student Aid (FAFSA®) form, verifying information, and making\\ncorrections and other changes to the information reported on the FAFSA form.\\nThroughout the Federal Student Aid Handbook, we use <college,= <school,= and <institution= interchangeably unless a\\nmore specific use is given. Similarly, <student,= <applicant,= and <aid recipient= are synonyms. <Parents= in this volume\\nrefers to the legal parents of dependent students, and <you= refers to the primary audience of the Handbook: financial aid\\nadministrators at colleges. <We= indicates the U.S. Department of Education (the Department, ED), and <federal student\\naid= and <Title IV aid= are synonymous terms for the financial aid offered by the Department.\\nWe appreciate any comments that you have on the Application and Veri'"
+              "'Volume 3\\nAcademic Calendars, Cost of Attendance, and\\nPackaging\\nIntroduction\\nThis volume of the Federal Student Aid (FSA) Handbook discusses the academic calendar, payment period, and\\ndisbursement requirements for awarding aid under the Title IV student financial aid programs, determining a student9s\\ncost of attendance, and packaging Title IV aid.\\nThroughout this volume of the Handbook, the words \"we,\" \"our,\" and \"us\" refer to the United States Department of\\nEducation (the Department). The word \"you\" refers to the primary audience of the Handbook, school financial aid\\nadministrators. In other volumes of the Handbook we use \"institution,\" \"school,\" and \"college\" interchangeably, unless a\\nmore specific meaning is provided. In this volume we consistently use the term \"school.\" <HEA= refers to the Higher\\nEducation Act of 1965, as amended. Title IV refers to the student financial aid programs authorized under Title IV of the\\nHEA.\\nWe appreciate any comments that you have on this volume as wel'"
             ]
           },
-          "execution_count": 142,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -419,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -504,9 +504,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (1582649948.py, line 1)",
+          "output_type": "error",
+          "traceback": [
+            "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31membedding_dim =  # YOUR ANSWER HERE\u001b[39m\n                     ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+          ]
+        }
+      ],
       "source": [
         "embedding_dim =  # YOUR ANSWER HERE"
       ]
@@ -1146,7 +1155,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.12.11"
     }
   },
   "nbformat": 4,
