Small change update

--- a/07_Synthetic_Data_Generation_and_LangSmith/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
+++ b/07_Synthetic_Data_Generation_and_LangSmith/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
@@ -1920,7 +1920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 44,
       "metadata": {
         "id": "z56pXwyUgFUt"
       },
@@ -1942,7 +1942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 45,
       "metadata": {
         "id": "rZLcTstJgfv5"
       },
@@ -1953,7 +1953,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 46,
       "metadata": {
         "id": "-LYsyirngj6n"
       },
@@ -1996,7 +1996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 47,
       "metadata": {
         "id": "b9MI2Bm2go1r"
       },
@@ -2038,7 +2038,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "hVUY25FKgxXx"
       },
@@ -2054,7 +2054,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "Q4TOZNYIg2v1"
       },
@@ -2074,7 +2074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "HqnTqeXMhAdx"
       },
@@ -2097,7 +2097,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2133,7 +2133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2404,8 +2404,17 @@
       "source": [
         "#### 🏗️ Activity #3:\n",
         "\n",
-        "Provide a screenshot of the difference between the two chains, and explain why you believe certain metrics changed in certain ways."
+        "Provide a screenshot of the difference between the two chains, and explain why you believe certain metrics changed in certain ways.\n",
+        "\n",
+        "The two screenshots are in the directory, experiment-1 and experiment 2\n",
+        "\n",
+        "The main difference is empathy. "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
